k8s/argo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # This MUST match the group.name in your frontend-ingress
    alb.ingress.kubernetes.io/group.name: shared-alb-group

spec:
  ingressClassName: alb
  rules:
    - host: myjerneyapp007.com
      http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
