k8s/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jerney-ingress
  namespace: jerney
  annotations:
    # Change class to alb
    kubernetes.io/ingress.class: "alb"
    # Essential for ALB to work
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # This group name merges this with any other ingress sharing this name
    alb.ingress.kubernetes.io/group.name: shared-alb-group
spec:
  ingressClassName: alb
  rules:
    - host: myjerneyapp007.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
